add priority searcj
